refactor: restore project to a working Maven-based app
Build & tooling
- Migrate to a standard Maven layout (src/main/java, src/main/resources)
- Add pom.xml (JavaFX 25, mysql-connector-j 9.7.0) and a Maven wrapper
- Drop the bundled Windows-only JavaFX/MySQL jars; dependencies are now
  resolved by Maven with the correct natives per OS
- Modernise docker-compose (MySQL 8, persistent volume, healthcheck)

Functionality (the to-do feature now actually works)
- Implement task creation and listing end to end (TaskService/ITaskService,
  Connector.createTask/getTasks, INSERT/SELECT SQL)
- Wire up TaskController: navigate to the add-task form, save tasks for the
  logged-in user, and render them in a ListView
- Add a Session to track the logged-in user; UserService now authenticates
  and returns the user
- Fix tasks schema (AUTO_INCREMENT id, default datecreated, wider description)

Cleanup
- Rewrite the DB layer with try-with-resources and remove the broken/dead
  execute() and executeWrapper() methods and debug prints
- Fix Task model types (LocalDateTime instead of DateFormat)
- Remove the unfinished TransitionProvider animation that hid the UI
- Remove the stray java.awt.TextField import and other dead code

Docs
- Rewrite README in English with a simple `docker compose up` + `./mvnw
  javafx:run` workflow

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>